[package]
name = "prover-network"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
bollard = "0.18.1"
figment = { version = "0.10.14", features = ["toml"] }
futures = "0.3.31"
futures-util = "0.3.31"
once_cell = "1.20.3"
pathbuf = "1.0.0"
serde = "1.0.218"
serde_json = "1.0.140"
solana-sdk = "~2.0"
thiserror = "2.0.12"
hashmap_macro = "0.1.0"
