[package]
name = "prover-network"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
figment = { version = "0.10.14", features = ["toml"] }
api = { workspace = true, features = ["off-chain"] }
constants.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
solana-logger.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
tokio.workspace = true
onchain.workspace = true
solana-program-test.workspace = true
spl-token.workspace = true
solana-program.workspace = true
state.workspace = true
solana-banks-interface.workspace = true
solana-banks-client.workspace = true
mockito = "1.6.1"
bollard = "0.18.1"
futures-util = "0.3.31"
serde.workspace = true
toml = "0.8.19"
futures = "0.3.31"
tracing = "0.1.41"
once_cell = "1.20.2"
env = "1.0.1"
serde_json = "1.0.138"
num-traits = "0.2.19"
thiserror.workspace = true
solana-client.workspace = true
bincode = "1.3.3"
hashmap_macro = "0.1.0"
